# jupyterlite-pyodide-server

./: .gitignore  README.md  install.json  package.json  pyproject.toml  tsconfig.json
binder/: environment.yml  postBuild  start
jupyterlite_pyodide_server/: __init__.py  build.py  handlers.py
jupyterlite_pyodide_server/etc/: jupyterlite_pyodide_server.json
jupyterlite_pyodide_server/labextension/: package.json
src/: index.ts
style/: index.css
